[package]
name = "tokio-select-closed-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
flume = "0.11.1"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
anyhow = "1.0.90"
futures-core = "0.3.31"
futures-util = "0.3.31"
pin-utils = "0.1.0"
